--- a/index.html
+++ b/index.html
@@ -4,8 +4,51 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Essen Spiel</title>
+    <p>Oct. 26–28, 2017</p>
+    <p>Four exciting days of playing & testing thousands of games from designers and publishers all over the world.</p>
   </head>
   <body>
+    <div class="">
+      <p>Tickets</p>
+      <p>Buy your multi-day pass now before they’re all sold out!</p>
+      <p>€480 for 4 days</p>
+      <p>Buy Now</p>
+    </div>
+    <div class="">
+      <p>Attending designers</p>
+      <p>Cathala, Bruno</p>
+      <p>Feld, Stefan</p>
+      <p>Kiesling, Michael</p>
+      <p>Kramer, Wolfgang</p>
+      <p>Lacerda, Vital</p>
+      <p>Ohley, Helmut</p>
+      <p>Rosenberg, Uwe</p>
+      <p>Sentieiro, Nuno</p>
+      <p>Soledade, Paulo</p>
+      <p>Wallace, Martin</p>
+    </div>
+    <div class="">
+      <p>Games to play</p>
+      <p>Agricola — a worker placement game of farm survival</p>
+      <p>Castles of Burgundy — a dice-based game of village building</p>
+      <p>Madeira — a dice-drafting and placement game of power building</p>
+      <p>The Gallerist — a worker placement competition to be the best gallery owner</p>
+      <p>Akrotiri — a tile-placement and movement game of Greek exploration</p>
+    </div>
+    <div class="">
+      <p>Hear from excited fans</p>
+      <p>Spiel is the best convention ever! I played so many new Euro games I can’t even begin to explain the awesomeness!
+      — Klaudia Bader</p>
+      <p>Beats GenCon by far. Many more games to my taste.
+      — Eho Tashiro</p>
+    </div>
+    <div class="">
+      <p>Location</p>
+      <p>Messe Essen</p>
+      <p>Norbertstrasse 2, 45131 Essen,</p>
+      <p>North Rhine-Westphalia</p>
+      <p>Germany</p>
+    </div>
 
   </body>
 </html>
