--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Essen Spiel</title>
+  </head>
+  <main>
     <p>Oct. 26–28, 2017</p>
     <p>Four exciting days of playing & testing thousands of games from designers and publishers all over the world.</p>
-  </head>
+  </main>
   <body>
     <div class="">
       <p>Tickets</p>
@@ -49,6 +51,5 @@
       <p>North Rhine-Westphalia</p>
       <p>Germany</p>
     </div>
-
   </body>
 </html>
